# potato-cpp

./: .gitignore  CMakeLists.txt  README.md  premake5.lua  requirements.txt
Config/cmake/dependencies/: common.cmake  windows.cmake
Scripts/: Clean.py  Rename.py  Setup.py
Source/SampleApp/: config.lua
Source/SampleApp/src/: main.cpp
Source/SampleDLL/: config.lua
Source/SampleLibrary/: config.lua
Source/SampleLibrary/include/: hello_statement.h
Source/SampleLibrary/include/Folder2/: basic_addition.h
Source/SampleLibrary/src/: counting.cpp  hello_statement.h
Source/SampleLibrary/src/Folder1/: secrets.cpp
Source/libpotato/: CMakeLists.txt  config.lua
Source/libpotato/include/: hello_statement.h
Source/libpotato/include/libpotato/: sample.h
Source/libpotato/include/libpotato/Folder2/: basic_addition.cpp  basic_addition.h
Source/libpotato/src/: sample.h
Source/libpotato/src/Folder1/: secrets.cpp
Source/libpotato/src/Folder2/: basic_addition.cpp  basic_addition.h
Source/libpotato_test/: CMakeLists.txt  config.lua
Source/libpotato_test/src/: main.cpp
Source/testpotato/: CMakeLists.txt  config.lua
Source/testpotato/src/: main.cpp
